test/spec_vectors/simd_bit_shift/fail/module_32.wat
(module (func $i16x8.shr_u-1st-arg-empty (result v128) (i16x8.shr_u (i32.const 0))))